--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -30,9 +30,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5eC-CD-DLQ">
-                                <rect key="frame" x="172" y="232" width="31" height="30"/>
+                                <rect key="frame" x="165" y="232" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="取得"/>
+                                <state key="normal" title="ポスト"/>
                                 <connections>
                                     <action selector="locatePost:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cpc-J7-KW9"/>
                                 </connections>
@@ -74,27 +74,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="緯度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZV-gl-8Oo">
-                                <rect key="frame" x="74" y="88" width="237" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="経度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rzF-p3-Nrb">
-                                <rect key="frame" x="74" y="158" width="237" height="41"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="rNy-YI-eZf">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qLG-PL-zpr" firstAttribute="bottom" secondItem="rNy-YI-eZf" secondAttribute="bottom" id="8z6-gi-hof"/>
+                            <constraint firstItem="qLG-PL-zpr" firstAttribute="trailing" secondItem="rNy-YI-eZf" secondAttribute="trailing" id="OeE-wh-5jG"/>
+                            <constraint firstItem="rNy-YI-eZf" firstAttribute="top" secondItem="qLG-PL-zpr" secondAttribute="top" id="hSU-db-qTc"/>
+                            <constraint firstItem="rNy-YI-eZf" firstAttribute="leading" secondItem="qLG-PL-zpr" secondAttribute="leading" id="oj1-vW-xgK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="qLG-PL-zpr"/>
                     </view>
                     <connections>
-                        <outlet property="ido" destination="MZV-gl-8Oo" id="0Ye-fn-Kmc"/>
-                        <outlet property="keido" destination="rzF-p3-Nrb" id="hDX-nM-b6Z"/>
+                        <outlet property="mapView" destination="rNy-YI-eZf" id="MzV-Ei-Wzt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3X-zF-2Q7" userLabel="First Responder" sceneMemberID="firstResponder"/>
