シャボンポスト前

--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -97,6 +97,21 @@
             </objects>
             <point key="canvasLocation" x="1840.8" y="124.58770614692655"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="TgN-C3-gTL">
+            <objects>
+                <viewController id="LSX-1G-oj3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YGN-bl-FPH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="h3b-6G-u5Y"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rpS-Lx-Ifn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="673" y="866"/>
+        </scene>
         <!--Detail Shabon View Controller-->
         <scene sceneID="eXu-eX-PNt">
             <objects>
