--- a/Heart-up/Base.lproj/Main.storyboard
+++ b/Heart-up/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="W29-nG-PRE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="eOz-S2-Qse">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,64 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="bAW-gy-PmR">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="経度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iAg-9n-INR">
-                                <rect key="frame" x="57" y="144" width="287" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5eC-CD-DLQ">
-                                <rect key="frame" x="165" y="232" width="46" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="ポスト"/>
-                                <connections>
-                                    <action selector="locatePost:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cpc-J7-KW9"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="緯度" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jcu-4C-ghG">
-                                <rect key="frame" x="57" y="102" width="287" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qap-2U-NVz">
-                                <rect key="frame" x="164" y="491" width="62" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="一覧表示"/>
-                                <connections>
-                                    <segue destination="1zu-iP-IYj" kind="show" id="cav-BE-1LL"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="Rlz-AM-4aI"/>
-                    <connections>
-                        <outlet property="latLabel" destination="jcu-4C-ghG" id="mgL-Im-v7k"/>
-                        <outlet property="lngLabel" destination="iAg-9n-INR" id="Fzc-Gc-DZB"/>
-                        <outlet property="mapView" destination="bAW-gy-PmR" id="ykS-DE-qxM"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1079.2" y="122.78860569715144"/>
-        </scene>
-        <!--Show Locate View Controller-->
+        <!--Heart up-->
         <scene sceneID="kwr-G1-Bmu">
             <objects>
                 <viewController id="1zu-iP-IYj" customClass="ShowLocateViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
@@ -88,6 +31,13 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="qLG-PL-zpr"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Heart up" id="Uw4-a9-e8i">
+                        <barButtonItem key="rightBarButtonItem" title="post" id="Udy-PB-7iU">
+                            <connections>
+                                <segue destination="LSX-1G-oj3" kind="presentation" id="6aB-yi-bkw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="rNy-YI-eZf" id="MzV-Ei-Wzt"/>
                         <segue destination="xI9-3v-M6q" kind="presentation" identifier="toDetailShabonViewController" id="pEI-PR-io7"/>
@@ -95,22 +45,37 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3X-zF-2Q7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1840.8" y="124.58770614692655"/>
+            <point key="canvasLocation" x="2780" y="124.58770614692655"/>
         </scene>
-        <!--View Controller-->
+        <!--Shabon Post View Controller-->
         <scene sceneID="TgN-C3-gTL">
             <objects>
-                <viewController id="LSX-1G-oj3" sceneMemberID="viewController">
+                <viewController id="LSX-1G-oj3" customClass="ShabonPostViewController" customModule="Heart_up" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YGN-bl-FPH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nuY-4a-H4x">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="悩みをシャボン玉に" id="zdR-ie-pfM">
+                                        <barButtonItem key="leftBarButtonItem" title="back" id="0b8-Xg-GWE">
+                                            <connections>
+                                                <action selector="back:" destination="LSX-1G-oj3" id="7j1-lF-aRk"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="h3b-6G-u5Y"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rpS-Lx-Ifn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="673" y="866"/>
+            <point key="canvasLocation" x="3614" y="125"/>
         </scene>
         <!--Detail Shabon View Controller-->
         <scene sceneID="eXu-eX-PNt">
@@ -140,22 +105,22 @@
             <point key="canvasLocation" x="1474.4000000000001" y="861.3193403298352"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="8Lm-Hb-5gv">
+        <scene sceneID="1Is-0F-0Lp">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="W29-nG-PRE" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="eOz-S2-Qse" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZXx-FP-rkn">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="83c-aD-7Rp">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="HOu-1z-jj6"/>
+                        <segue destination="1zu-iP-IYj" kind="relationship" relationship="rootViewController" id="9Ep-My-jTB"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Ihy-S9-mal" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xuK-NE-VTk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="122.78860569715144"/>
+            <point key="canvasLocation" x="1840.8" y="124.58770614692655"/>
         </scene>
     </scenes>
 </document>
